7009975: Large file support broken in hs20-b04

Reviewed-by: phh, acorn, kamg