hotspot/src/os/solaris/vm/os_solaris.cpp
@@ -5197,7 +5197,7 @@ int os::open(const char *path, int oflag, int mode) {
   int o_delete = (oflag & O_DELETE);
   oflag = oflag & ~O_DELETE;
 
-  fd = ::open(path, oflag, mode);
+  fd = ::open64(path, oflag, mode);
   if (fd == -1) return -1;
 
   //If the open succeeded, the file might still be a directory
